<resources>

    <!--facebook login-->
    <string name="facebook_app_id">931709773593928</string>
    <string name="fb_login_protocol_scheme">fb931709773593928</string>

    <string name="app_name">Zeeley</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps">Map</string>
    <string name="change">Change Interest</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="nopeople">No People Available! </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="chatname">NAME</string>
    <string name="lastmessage">lastmessage</string>
    <string name="date">Date</string>
    <string name="title_activity_login">Sign in</string>
    <string name="maps_key">AIzaSyB4DklARlRiy-e7-Kv08boxVfagZEOgjcY</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_chatactivity">chatactivity</string>
    <string name="pizza">Pizza</string>
    <string name="cricket">Cricket</string>
    <string name="cab">Cab Sharing</string>
    <string name="dating">Dating</string>
    <string name="title_activity_my_login1">my_login1</string>
    <string name="title_activity_my_login2">my_login2</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="title_activity_profile">Profile</string>
    <string name="clearchat">Clear Chat</string>
    <string name="title_activity_my_profile">MyProfile</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_interest">Interest</string>
    <string-array name="list_entries">
        <item>Sports</item>
        <item>Music</item>
        <item>Study</item>
        <item>Travel</item>
        <item>Dating</item>

    </string-array>
    <string name="title_activity_profile_photo">profile_photo</string>
    <string name="title_activity_splash">splashActivity</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="search">Search</string>
    <string name="block">Block</string>
    <string name="title_activity_howitworks">Howitworks</string>
    <string name="title_activity_tabd_activity">tabd_activity</string>
    <string name="continu">continue</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>

    <string-array name="block">
        <item>Invitation</item>
        <item>Viewing profile</item>
        <item>messaging</item>
        <item>accesing location</item>
    </string-array>

    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_forward">forward</string>
    <string name="chats">Chats</string>
    <string name="privacy">privacy</string>
    <string name="title_activity_notifications">Requests</string>
    <string name="title_activity_show_interest">Show Interest</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="settings">Settings</string>
    <string name="title_activity_travel_form">Travel Form</string>
    <string name="title_activity_blocked_contacts">Blocked Contacts</string>

    <string name="app_id"></string>
    <string name="travel">Travel</string>
    <string name="title_activity_group_profile">group Profile</string>
    <string name="title_activity_mygrid">mygridActivity</string>
    <string name="title_activity_interst__list">Select Interest</string>
    <string name="title_activity_aboutand_help">About and Help</string>
    <string name="title_activity_feedback">Feedback</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_ghroup_chat_screen">ghroupChatScreen</string>
    <string name="viewgrpinfo">Group info</string>
    <string name="exit">Exit group</string>
    <string name="title_activity_trip_details">Form Details</string>
    <string name="title_activity_cab_form_details">cab_form_details</string>
    <string name="title_activity_game_form_details">game_form_details</string>
    <string name="title_activity_quicky_form_details">quicky_form_details</string>
    <string name="title_activity_travel_form_details">travel_form_details</string>
    <string name="title_activity_restaurant_form_details">restaurant_form_details</string>
    <string name="title_activity_movie_form_details">movie_form_details</string>
    <string name="title_activity_cab_form">Cab</string>
    <string name="locate">Locate on Map</string>
    <string name="forms">Forms</string>
    <string name="restaurantform">Restaurant Form</string>
    <string name="gameform">Game Form</string>
    <string name="quickyform">Quicky Form</string>
    <string name="movieform">Movie Form</string>
    <string name="Newgroup">New Group</string>
    <string name="title_activity_newgroup">New group</string>
</resources>
