<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.zeeley.MainActivity">
    <item
        android:id="@+id/interest"
        android:orderInCategory="30"
        android:title="@string/change"
        android:icon="@drawable/pizza"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="30"
        android:title="@string/action_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/profile"
        android:orderInCategory="20"
        android:title="@string/profile"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/newgroup"
        android:orderInCategory="20"
        android:title="@string/Newgroup"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/travelling"
        android:orderInCategory="10"
        android:title="@string/forms"
        app:showAsAction="never"
        >
        <menu>
            <item
                android:id="@+id/cab"
                android:orderInCategory="100"
                android:title="cab"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/restaurant"
                android:orderInCategory="100"
                android:title="restaurant"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/quicky"
                android:orderInCategory="100"
                android:title="quicky"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/game"
                android:orderInCategory="100"
                android:title="game"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/travel"
                android:orderInCategory="100"
                android:title="travel"
                app:showAsAction="never"
                />
            <item
                android:id="@+id/movie"
                android:orderInCategory="100"
                android:title="movie"
                app:showAsAction="never"
                />
        </menu>
    </item>
</menu>
