<preference-headers xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- These settings headers are only used on tablets. -->
    <header
        android:fragment="com.zeeley.settings$privacyFragment"
        android:icon="@drawable/ic_sync_black_24dp"
        android:title="@string/privacy" />
    <header
        android:fragment="com.zeeley.settings$chatsFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/chats"

        />

    <header
        android:fragment="com.zeeley.settings$notificationFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />


    <header android:title="Blocked contacts">
        <intent
            android:targetClass="com.zeeley.blockedContacts"
            android:targetPackage="com.zeeley" />
    </header>
    <header android:title="Change password"

        >
        <intent
            android:targetClass="com.zeeley.changePassword"
            android:targetPackage="com.zeeley" />
    </header>
    <header android:title="About and Help">
        <intent
            android:targetClass="com.zeeley.AboutandHelp"
            android:targetPackage="com.zeeley" />
    </header>
    <header android:title="Feedback">
        <intent
            android:targetClass="com.zeeley.Feedback"
            android:targetPackage="com.zeeley" />
    </header>

</preference-headers>
